2002-10-22  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::exiting): New variable.
	(cygthread::initialized): Delete.
	(cygthread::stub): Use exiting variable to determine when to exit.
	(cygthread::runner): Delete.
	(cygthread_protect): New variable.
	(cygthread::init): Don't start runner thread.  Initialize muto for list
	protection.
	(cygthread::freerange): Return pointer to cygthread.
	(cygthread::operator new): Change logic to start threads on an
	as-needed basis.
	(cygthread::detach): Don't zero id.
	(cygthread::terminate): Don't kill any executing threads.  Just set
	exiting flag.
	* cygthread.h (cygthread): Reflect above changes.
	* dcrt0.cc (dll_crt0_1): Move cygthread initialization later.

	* fork.cc (fork_child): Do fdtab fixup after dll fixup or (apparently)
	winsock may allocate memory in dll load address.

2002-10-22  Pierre Humblet <pierre.humblet@ieee.org>

	* sec_helper.cc (cygsid::get_id): If the sid matches a sid stored in
	cygheap->user, return the uid or gid from myself.
	* security.cc (alloc_sd): If gid == myself->gid, return the group sid
	from cygheap->user.  Remove the test for uid == original_uid, which is
	counter-productive.

2002-10-22  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (cygheap_fixup_in_child): Use user_heap element in
	cygheap.
	(init_cheap): Ditto for declaration.
	* fork.cc (fork_parent): Use user_heap element in cygheap.
	* heap.h (inheap): Ditto.
	* heap.cc (sbrk): Ditto.
	(heap_init): Ditto.  Reorganize to shrink heap chunk as required and
	record new value in cygheap.
	* dcrt0.cc (dll_crt0_1): More "move the cygthread init" games.
	* shared.cc (open_shared): Rework memory protection to properly deal
	with relocated shared segment.
	(shared_info::heap_chunk_size): Rename element to 'heap_chunk'.
	* shared_info.h (shared_info): Ditto for declaration.
	* strace.cc (strace::hello): Report on heap chunk size from cygheap
	since it may shrink.

2002-10-20  Christopher Faylor  <cgf@redhat.com>
